--- a/client/src/components/Headers/Headers.css
+++ b/client/src/components/Headers/Headers.css
@@ -4,6 +4,7 @@ header {
   min-height: 5em;
   display: flex;
   justify-content: space-between;
+  padding: 0 0.5rem;
 }
 .header-left {
   display: flex;
@@ -18,6 +19,13 @@ header {
 }
 .header-left div {
   margin-bottom: 0.25em;
+}
+.header-right {
+  display: flex;
+  align-items: center;
+  text-decoration: underline;
+  font-weight: lighter;
+  cursor: pointer;
 }
 footer {
   background-color: #282828;
