--- a/client/src/components/Administrator/AdminView.css
+++ b/client/src/components/Administrator/AdminView.css
@@ -5,7 +5,7 @@
 .admin-view-container {
   display: flex;
   flex-direction: column;
-  margin: 15vh 30vw;
+  padding: 15vh 30vw;
 }
 .admin-view-options {
   padding-top: 1rem;
