--- a/client/src/components/Forms/Inputs/Inputs.css
+++ b/client/src/components/Forms/Inputs/Inputs.css
@@ -14,7 +14,7 @@
   white-space: normal;
   border: 0;
   border-radius: 0.125rem;
-  box-shadow: 0 0 2px;
+  box-shadow: 0 0 2px black !important;
   cursor: pointer;
   color: white;
   padding: 0.84rem 2.14rem;
